Fix footer alignment to center

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,8 @@ a:hover {
 }
 
 .footer p {
-  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 600px) {
